# NppLSP

./: .gitignore  CMakeLists.txt  NppLsp.sln  README.md
cmake/: Hardening.cmake  Version.h.in  VersionFromGit.cmake
src/: AboutDialog.cpp  AboutDialog.h  LspClient.cpp  LspClient.h  Main.cpp  NppGateway.h  NppLsp.vcxproj  ScintillaGateway.h  Version.h  Version.rc  resource.h  resource.rc
src/npp/: Notepad_plus_msgs.h  PluginInterface.h  Scintilla.h  menuCmdID.h
